Novo calendário integrado ao site via link Horários (BSB) no rodapé.

--- a/br/novo-calendario.html
+++ b/br/novo-calendario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/br/calendario.css">
-    <title>INSTITUTO SER INTEGRAL</title>
+    <title>Instituto Ser Integral</title>
 </head>
 <body>
     <h1><span class="blue"><span class="yellow">HORÁRIO DAS AULAS</pan></h1>
@@ -121,6 +121,115 @@
                     <td>ALEXANDRA (PORT)</td>
                     <td>ELIS (PORT)</td>
                     <td>MARIANA (PORT)</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>IF - MATUTINO</h2>
+        
+        <table class="container">
+            <thead>
+                <tr>
+                    <th><h1>HORÁRIO MS</h1></th>
+                    <th><h1>HORÁRIO BSB</h1></th>
+                    <th><h1>TER</h1></th>
+                    <th><h1>QUI</h1></th>
+                    <th><h1>SAB</h1></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>7h00 - 7h45</td>
+                    <td>8h00 - 8h45</td>
+                    <td>ROBERTI (MAT)</td>
+                    <td>JO. PEDI (MAT)</td>
+                    <td>PC (MAT)</td>
+                </tr>
+                <tr>
+                    <td>7h45 - 8h30</td>
+                    <td>8h45 - 9h30</td>
+                    <td>ROBERTI (MAT)</td>
+                    <td>JO. PEDI (MAT)</td>
+                    <td>PC (MAT)</td>
+                </tr>
+                <tr>
+                    <td>8h30 - 9h15</td>
+                    <td>9h30 - 10h15</td>
+                    <td>ROBERTI (MAT)</td>
+                    <td>BRUNO (MAT)</td>
+                    <td>LUÍS (MAT)</td>
+                </tr>
+            <tr>
+                    <td>9h15 - 9h35</td>
+                    <td>10h15 - 10h35</td>
+                    <td>Intervalo</td>
+                    <td>Intervalo</td>
+                    <td>Intervalo</td>
+                </tr>
+            <tr>
+                    <td>9h35 - 10h20</td>
+                    <td>10h35 - 11h20</td>
+                    <td>BIRA (CG)</td>
+                    <td>ARIELLY (PORT)</td>
+                    <td>JOÃO (MAT)</td>
+                </tr>
+            <tr>
+                    <td>10h20 - 10h50</td>
+                    <td>11h20 - 11h50</td>
+                    <td>JAQUE (MAT)</td>
+                    <td>ARIELLY (PORT)</td>
+                    <td>JOÃO (MAT)</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>IF - VESPERTINO</h2>
+
+        <table class="container">
+            <thead>
+                <tr>
+                    <th><h1>HORÁRIO MS</h1></th>
+                    <th><h1>HORÁRIO BSB</h1></th>
+                    <th><h1>TER</h1></th>
+                    <th><h1>QUI</h1></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>13h00 - 13h45</td>
+                    <td>14h00 - 14h45</td>
+                    <td>JAQUE (PORT)</td>
+                    <td>EMILY (PORT)</td>
+                </tr>
+                <tr>
+                    <td>13h45 - 14h30</td>
+                    <td>14h45 - 15h30</td>
+                    <td>JAQUE (PORT)</td>
+                    <td>EMILY (PORT)</td>
+                </tr>
+                <tr>
+                    <td>14h30 - 15h15</td>
+                    <td>15h30 - 16h15</td>
+                    <td>BIRA (CG)</td>
+                    <td>EMILY (PORT)</td>
+                </tr>
+            <tr>
+                    <td>15h15 - 15h35</td>
+                    <td>16h15 - 16h35</td>
+                    <td>Intervalo</td>
+                    <td>Intervalo</td>
+                </tr>
+            <tr>
+                    <td>15h35 - 16h20</td>
+                    <td>16h35 - 17h20</td>
+                    <td>MARCE (MAT)</td>
+                    <td>ZONIN (MAT)</td>
+                </tr>
+            <tr>
+                    <td>16h20 - 16h50</td>
+                    <td>17h20 - 17h50</td>
+                    <td>MARCE (MAT)</td>
+                    <td>ZONIN (MAT)</td>
                 </tr>
             </tbody>
         </table>
