--- a/mapa-do-site.html
+++ b/mapa-do-site.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Fale Conosco - Instituto Ser Integral</title>
+  <title>Instituto Ser Integral</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
@@ -38,12 +38,7 @@
           <li class="nav-item">
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="africa.html">África</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="espiritismo.html">Espiritismo</a>
-        </li>
+
         </ul>
       </div>
     </div>
@@ -51,42 +46,6 @@
   <div class="grid-container">
     <h1>EM DESENVOLVIMENTO</h1>
   </div>
-  <footer class="footer">
-    <div class="container-fluid padding">
-      <div class="row text-center">
-        <div class="col-md-4">
-          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
-          <hr>
-          <h6>Fale Conosco</h6>
-          <hr>
-          <p>projetoavante00@gmail.com</p>
-          <p>Avenida Gualter Barbosa, 1.206</p>
-          <p>Campo Grande, MS, 79.015-480</p>
-        </div>
-        <div class="col-md-4">
-          <hr>
-          <a href="/br/novo-calendario.html"><h6>Horários (BSB)</h6></a>
-          <hr>
-          <p>Segunda, Quarta e Sexta</p>
-          <p>8h - 11h40min | 14h - 17h40min</p>
-        </div>
-        <div class="col-md-4">
-          <hr>
-          <h6>Tópicos</h6>
-          <hr>
-          <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
-          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
-          <p><a href="ajuda.html">Ajuda</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <p><a href="missao.html">Missão</a></p>
-          <p><a href="colaboradores.html">Colaboradores</a></p>
-          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
-        </div>
-      </div>
-    </div>
-  </footer>
-  <div style="position:fixed; bottom:0px; right:30px;">
-    <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
 </body>
+
 </html>
