Incluído o link do Novo Calendário para diversas páginas.

--- a/hotsite-gab-cm.html
+++ b/hotsite-gab-cm.html
@@ -148,7 +148,7 @@
         </div>
         <div class="col-md-4">
           <hr>
-          <h6>Horários (BSB)</h6>
+          <a href="/br/novo-calendario.html"><h6>Horários (BSB)</h6></a>
           <hr>
           <p>Segunda, Quarta e Sexta</p>
           <p>8h - 11h40min | 14h - 17h40min</p>
