Ajustado o calendário de sábado à tarde.

--- a/br/novo-calendario.html
+++ b/br/novo-calendario.html
@@ -192,6 +192,7 @@
                     <th><h1>HORÁRIO BSB</h1></th>
                     <th><h1>TER</h1></th>
                     <th><h1>QUI</h1></th>
+                    <th><h1>SAB</h1></th>
                 </tr>
             </thead>
             <tbody>
@@ -200,36 +201,42 @@
                     <td>14h00 - 14h45</td>
                     <td>JAQUE (PORT)</td>
                     <td>EMILY (PORT)</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
                 <tr>
                     <td>13h45 - 14h30</td>
                     <td>14h45 - 15h30</td>
                     <td>JAQUE (PORT)</td>
                     <td>EMILY (PORT)</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
                 <tr>
                     <td>14h30 - 15h15</td>
                     <td>15h30 - 16h15</td>
                     <td>BIRA (CG)</td>
                     <td>EMILY (PORT)</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
             <tr>
                     <td>15h15 - 15h35</td>
                     <td>16h15 - 16h35</td>
                     <td>Intervalo</td>
                     <td>Intervalo</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
             <tr>
                     <td>15h35 - 16h20</td>
                     <td>16h35 - 17h20</td>
                     <td>MARCE (MAT)</td>
                     <td>ZONIN (MAT)</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
             <tr>
                     <td>16h20 - 16h50</td>
                     <td>17h20 - 17h50</td>
                     <td>MARCE (MAT)</td>
                     <td>ZONIN (MAT)</td>
+                    <td>DESCANSO SEMANAL</td>
                 </tr>
             </tbody>
         </table>
