Alteradas configurações das tabelas para telas com largura até 400px.

--- a/br/novo-calendario.html
+++ b/br/novo-calendario.html
@@ -10,7 +10,7 @@
 <body>
     <h1><span class="blue"><span class="yellow">HORÁRIO DAS AULAS</pan></h1>
         <h2>COLÉGIO MILITAR - MATUTINO</h2>
-        
+
         <table class="container">
             <thead>
                 <tr>
@@ -25,23 +25,23 @@
                 <tr>
                     <td>7h00 - 7h45</td>
                     <td>8h00 - 8h45</td>
-                    <td>JU (PORT)</td>
-                    <td>GIOVANA (PORT)</td>
-                    <td>LUCAS (MAT)</td>
+                    <td>Ju (Port)</td>
+                    <td>Giovana (Port)</td>
+                    <td>Lucas (Mat)</td>
                 </tr>
                 <tr>
                     <td>7h45 - 8h30</td>
                     <td>8h45 - 9h30</td>
-                    <td>JU (PORT)</td>
-                    <td>GIOVANA (PORT)</td>
-                    <td>LUCAS (MAT)</td>
+                    <td>Ju (Port)</td>
+                    <td>Giovana (Port)</td>
+                    <td>Lucas (Mat)</td>
                 </tr>
                 <tr>
                     <td>8h30 - 9h15</td>
                     <td>9h30 - 10h15</td>
-                    <td>PAULO (MAT)</td>
-                    <td>GIOVANA (PORT)</td>
-                    <td>LUCAS (MAT)</td>
+                    <td>Paulo (Mat)</td>
+                    <td>Giovana (Port)</td>
+                    <td>Lucas (Mat)</td>
                 </tr>
             <tr>
                     <td>9h15 - 9h35</td>
@@ -53,16 +53,16 @@
             <tr>
                     <td>9h35 - 10h20</td>
                     <td>10h35 - 11h20</td>
-                    <td>JOÃO (MAT)</td>
-                    <td>RODRIGO (MAT)</td>
-                    <td>FERNANDA (PORT)</td>
+                    <td>João (Mat)</td>
+                    <td>Rodrigo (Mat)</td>
+                    <td>Fernanda (Port)</td>
                 </tr>
             <tr>
                     <td>10h20 - 10h50</td>
                     <td>11h20 - 11h50</td>
-                    <td>JOÃO (MAT)</td>
-                    <td>RODRIGO (MAT)</td>
-                    <td>FERNANDA (PORT)</td>
+                    <td>João (Mat)</td>
+                    <td>Rodrigo (Mat)</td>
+                    <td>Fernanda (Port)</td>
                 </tr>
             </tbody>
         </table>
@@ -83,23 +83,23 @@
                 <tr>
                     <td>13h00 - 13h45</td>
                     <td>14h00 - 14h45</td>
-                    <td>JUNGES (PORT)</td>
-                    <td>KAUÊ (MAT)</td>
-                    <td>RODRIGO (MAT)</td>
+                    <td>Junges (Port)</td>
+                    <td>Kauê (Mat)</td>
+                    <td>Rodrigo (Mat)</td>
                 </tr>
                 <tr>
                     <td>13h45 - 14h30</td>
                     <td>14h45 - 15h30</td>
-                    <td>JUNGES (PORT)</td>
-                    <td>KAUÊ (MAT)</td>
-                    <td>RODRIGO (MAT)</td>
+                    <td>Junges (Port)</td>
+                    <td>Kauê (Mat)</td>
+                    <td>Rodrigo (Mat)</td>
                 </tr>
                 <tr>
                     <td>14h30 - 15h15</td>
                     <td>15h30 - 16h15</td>
-                    <td>PAULO (MAT)</td>
-                    <td>KAUÊ (MAT)</td>
-                    <td>RODRIGO (MAT)</td>
+                    <td>Paulo (Mat)</td>
+                    <td>Kauê (Mat)</td>
+                    <td>Rodrigo (Mat)</td>
                 </tr>
             <tr>
                     <td>15h15 - 15h35</td>
@@ -111,16 +111,16 @@
             <tr>
                     <td>15h35 - 16h20</td>
                     <td>16h35 - 17h20</td>
-                    <td>ALEXANDRA (PORT)</td>
-                    <td>ELIS (PORT)</td>
-                    <td>MARIANA (PORT)</td>
+                    <td>Alexandra (Port)</td>
+                    <td>Elis (Port)</td>
+                    <td>Mariana (Port)</td>
                 </tr>
             <tr>
                     <td>16h20 - 16h50</td>
                     <td>17h20 - 17h50</td>
-                    <td>ALEXANDRA (PORT)</td>
-                    <td>ELIS (PORT)</td>
-                    <td>MARIANA (PORT)</td>
+                    <td>Alexandra (Port)</td>
+                    <td>Elis (Port)</td>
+                    <td>Mariana (Port)</td>
                 </tr>
             </tbody>
         </table>
@@ -141,23 +141,23 @@
                 <tr>
                     <td>7h00 - 7h45</td>
                     <td>8h00 - 8h45</td>
-                    <td>ROBERTI (MAT)</td>
-                    <td>JO. PEDI (MAT)</td>
-                    <td>PC (MAT)</td>
+                    <td>Roberti (Mat)</td>
+                    <td>Jo. Pedi (Mat)</td>
+                    <td>Paulo (Mat)</td>
                 </tr>
                 <tr>
                     <td>7h45 - 8h30</td>
                     <td>8h45 - 9h30</td>
-                    <td>ROBERTI (MAT)</td>
-                    <td>JO. PEDI (MAT)</td>
-                    <td>PC (MAT)</td>
+                    <td>Roberti (Mat)</td>
+                    <td>Jo. Pedi (Mat)</td>
+                    <td>Paulo (Mat)</td>
                 </tr>
                 <tr>
                     <td>8h30 - 9h15</td>
                     <td>9h30 - 10h15</td>
-                    <td>ROBERTI (MAT)</td>
-                    <td>BRUNO (MAT)</td>
-                    <td>LUÍS (MAT)</td>
+                    <td>Roberti (Mat)</td>
+                    <td>Bruno (Mat)</td>
+                    <td>Luís (Mat)</td>
                 </tr>
             <tr>
                     <td>9h15 - 9h35</td>
@@ -169,16 +169,16 @@
             <tr>
                     <td>9h35 - 10h20</td>
                     <td>10h35 - 11h20</td>
-                    <td>BIRA (CG)</td>
-                    <td>ARIELLY (PORT)</td>
-                    <td>JOÃO (MAT)</td>
+                    <td>Bira (CG)</td>
+                    <td>Arielly (Port)</td>
+                    <td>João (Mat)</td>
                 </tr>
             <tr>
                     <td>10h20 - 10h50</td>
                     <td>11h20 - 11h50</td>
                     <td>JAQUE (MAT)</td>
-                    <td>ARIELLY (PORT)</td>
-                    <td>JOÃO (MAT)</td>
+                    <td>Arielly (Port)</td>
+                    <td>João (Mat)</td>
                 </tr>
             </tbody>
         </table>
@@ -199,44 +199,44 @@
                 <tr>
                     <td>13h00 - 13h45</td>
                     <td>14h00 - 14h45</td>
-                    <td>JAQUE (PORT)</td>
-                    <td>EMILY (PORT)</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Jaque (Port)</td>
+                    <td>Emily (Port)</td>
+                    <td>Descanso  semanal </td>
                 </tr>
                 <tr>
                     <td>13h45 - 14h30</td>
                     <td>14h45 - 15h30</td>
-                    <td>JAQUE (PORT)</td>
-                    <td>EMILY (PORT)</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Jaque (Port)</td>
+                    <td>Emily (Port)</td>
+                    <td>Descanso  semanal </td>
                 </tr>
                 <tr>
                     <td>14h30 - 15h15</td>
                     <td>15h30 - 16h15</td>
-                    <td>BIRA (CG)</td>
-                    <td>EMILY (PORT)</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Bira (CG)</td>
+                    <td>Emily (Port)</td>
+                    <td>Descanso  semanal </td>
                 </tr>
             <tr>
                     <td>15h15 - 15h35</td>
                     <td>16h15 - 16h35</td>
                     <td>Intervalo</td>
                     <td>Intervalo</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Descanso  semanal </td>
                 </tr>
             <tr>
                     <td>15h35 - 16h20</td>
                     <td>16h35 - 17h20</td>
-                    <td>MARCE (MAT)</td>
-                    <td>ZONIN (MAT)</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Marce (Mat)</td>
+                    <td>Zonin (Mat)</td>
+                    <td>Descanso  semanal </td>
                 </tr>
             <tr>
                     <td>16h20 - 16h50</td>
                     <td>17h20 - 17h50</td>
-                    <td>MARCE (MAT)</td>
-                    <td>ZONIN (MAT)</td>
-                    <td>DESCANSO SEMANAL</td>
+                    <td>Marce (Mat)</td>
+                    <td>Zonin (Mat)</td>
+                    <td>Descanso  semanal </td>
                 </tr>
             </tbody>
         </table>
